--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 # Set the maximum line length to 79.
 line-length = 79
+exclude = [".env"]
 
 [tool.ruff.lint]
 # Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
