--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.111.0"
 pytest = "^8.2.2"
 python-dotenv = "^1.0.1"
 websockets = "^12.0"
+icecream = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
